Fixed mobile overlay not showing and hiding also made it so user can see all links when overlay is on

--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -153,10 +153,6 @@ li {
   display: none;
 }
 
-.mobile-overlay {
-  display: none;
-}
-
 @media (max-width: 600px) {
   .site-nav {
     display: none;
@@ -225,5 +221,22 @@ li {
     height: 100%;
     transition: 0.5s ease;
     z-index: 1;
+  }
+
+  .mobile-links {
+    color: var(--mid-green);
+    margin-top: 25%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;
+  }
+
+  .mobile-links > li > * {
+    color: var(--mid-green);
+  }
+
+  .mobile-links > .products-dropdown-wrapper > .products-dropdown {
+    font-size: 16px;
   }
 }
